--- a/Local-Communities.html
+++ b/Local-Communities.html
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<div id="custom-html-1dg"><div data-tf-widget="nYWFp1F7" data-tf-opacity="100" data-tf-iframe-props="title=Local Communities Benchmark Survey V2" data-tf-transitive-search-params="" data-tf-disable-scroll="" data-tf-auto-resize="" data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script></div>
+<div id="custom-html-1dg"><div data-tf-widget="nYWFp1F7" data-tf-opacity="100" data-tf-hide-headers="" data-tf-iframe-props="title=Local Communities Benchmark Survey V2" data-tf-transitive-search-params="" data-tf-medium="snippet" style="width:100%;height:625px;"></div><script src="//embed.typeform.com/next/embed.js"></script></div>
 
 <section class="mbr-section article content10 cid-tuKNkN8DUQ" id="content10-149">
     
