--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Contact details</h5>
-                <p class="mbr-text">Email: info@responsible100.com<br>Phone: +44 (0)20 3372 4504<br><a href="contact-us.html" class="text-primary">Contact Form</a><br></p>
+                <p class="mbr-text">Email: info@responsible100.com<br>Phone: +44 (0)20 3372 4504<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Site Map</h5>
-                <p class="mbr-text"><a href="index.html" class="text-primary">Home</a><br><a href="about.html" class="text-primary">About</a><br><a href="simple-steps.html" class="text-primary">Simple Steps</a><br><a href="issues.html" class="text-primary">20 Responsibility Issues</a><br><a href="support.html" class="text-primary">How We Support</a><br><a href="get-started.html" class="text-primary">Get Started</a><br><a href="partner-us.html" class="text-primary">Partner With Us</a><br><a href="benchmarks.html" class="text-primary">Benchmarks</a><br><a href="workshops.html" class="text-primary">Expert Workshops</a><br><a href="R100-Led-Workshops.html" class="text-primary">R100 Workshops</a><br></p>
+                <p class="mbr-text"></p>
             </div>
         </div>
         <div class="footer-lower">
